Fixed issue with update form not showing correct endDate
Added a table for showing the users that have checked into an event.

Also added a config file so that it is easier to target different servers.

--- a/less/eventspage.less
+++ b/less/eventspage.less
@@ -66,3 +66,7 @@ and (min-width : 750px) {
 	border : 0;
 	padding : 0;
 }
+.map-container{
+		height : 350px;
+		overflow: auto;
+}
